--- a/webapp/main/templates/main/about.html
+++ b/webapp/main/templates/main/about.html
@@ -1,6 +1,13 @@
 {% extends 'main/layout.html' %}
+{% block headblock %}
+
+
+<style>{% include static 'about.css' %}</style>
+
+{%endblock%}
 
 {% block body %}
+
 <h1 style="text-align:center;">Про нас</h1>
 {%endblock%}
 
