--- a/webapp/main/templates/main/message.html
+++ b/webapp/main/templates/main/message.html
@@ -16,14 +16,14 @@ Message me
     <div class="content">
       <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label">You contacts</label>
-          <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Mail or other social">
+          <input type="text" class="form-control message" id="exampleFormControlInput1" placeholder="Mail or other social">
     </div>
     <div class="mb-3">
       <label for="exampleFormControlTextarea1" class="form-label">You message</label>
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
         <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-primary">SEND</button>
+            <button type="submit" class="btn btn-primary message">SEND</button>
         </div>
 
     </div>
