--- a/webapp/main/templates/main/layout.html
+++ b/webapp/main/templates/main/layout.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="{%static 'main/css/about.css'%}">
     <link rel="stylesheet" href="{%static 'main/css/tmain.css'%}">
     <link rel="stylesheet" href="{%static 'main/css/table.css'%}">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <title>{% block title %}{%endblock%}</title>
 </head>
@@ -21,7 +24,7 @@
 <nav class="navbar navbar-expand-lg bg-light">
 
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'home' %} ">MAIN</a>
+    <a class="navbar-brand" href="{% url 'homepage' %} ">MAIN</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -35,6 +38,8 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="{% url 'home' %}">Tables</a></li>
             <li><a class="dropdown-item" href="{% url 'telegram' %}">Telegram bot</a></li>
+              <li><a class="dropdown-item" href="{% url 'parsing' %}">Parsing</a></li>
+              <li><a class="dropdown-item" href="{% url 'camera' %}">Camera</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
