--- a/webapp/main/templates/main/index.html
+++ b/webapp/main/templates/main/index.html
@@ -10,7 +10,7 @@
     <div class="row content">
         <div class="row col-12 head">
             <div class="col-md-5 d-flex justify-content-center">
-            <img src="static/main/img/me1.jpg" class="me_photo" alt="me :D">
+            <img src="static/main/img/Alsome.png" class="me_photo" alt="me :D">
 
         </div>
             <div class="col-md-3">
